--- a/src/login.css
+++ b/src/login.css
@@ -7,10 +7,11 @@
 .box-2{
     background-color: white;
     height: 300px;
-    width: 350px;
+    width: 360px;
     align-items: center;
     justify-content: space-around;
-    box-shadow: -1px 4px 20px -6px rgba(43, 42, 42, 0.7);
+    /* box-shadow: -1px 4px 20px -6px rgba(41, 40, 40, 0.7); */
+    box-shadow: -1px 7px 25px -6px rgba(41, 40, 40, 0.7);
 }
 
 .box-2 > img{
@@ -29,10 +30,10 @@
     margin-top: 35px;
     margin-left: 120px;
     color: white;
-    background-color: rgb(7, 148, 7);
+    background-color: rgb(152, 97, 189);
+    /* background-color: rgb(7, 148, 7); */
     padding: 5px;
     font-size: x-small;
     border: none;
     cursor: pointer;
 }
-
