--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 .App {
   display: grid;
   place-items: center;
-  background-color: #f3f7de;
+  background-color: rgb(217, 186, 238);
+  /* background-color: #f3f7de; */
   height: 600px;
 }
 
