--- a/src/main_chat.css
+++ b/src/main_chat.css
@@ -54,10 +54,12 @@
 
 .main_chat_area{
     flex:1;
-    background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+    background-image: url(./chatbackground.jpg);
     overflow: scroll;
     padding: 30px;
     background-repeat: repeat;
+    background-size: 500px 500px;
+    opacity: 0.7;
     background-position: center;
 }
 
